--- a/EDM Data Server.csproj
+++ b/EDM Data Server.csproj
@@ -31,11 +31,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>EDM_Data_Server.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="InTheHand.Net.Personal, Version=3.5.605.0, Culture=neutral, PublicKeyToken=ea38caa273134499, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\InTheHand.Net.Personal.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,15 +47,20 @@
     <Compile Include="EDM_DI2002.cs" />
     <Compile Include="EDM_ROCKY.cs" />
     <Compile Include="EDM_TC2002.cs" />
+    <Compile Include="EthernetServer.cs" />
     <Compile Include="Laser.cs" />
     <Compile Include="ManualInstrumentReading.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialEDM.cs" />
     <Compile Include="SerialPortFixer.cs" />
+    <Compile Include="Server.cs" />
+    <Compile Include="WifiServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
